tests/dataset/tpc-h/compiler/cpp/q4.error
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:66:12: error: ‘o’ was not declared in this scope
   66 |   decltype(o) o;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:66:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:69:35: error: ‘struct Result’ has no member named ‘o_orderpriority’
   69 |   decltype(std::declval<Result>().o_orderpriority) key;
      |                                   ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:69:35: error: ‘struct Result’ has no member named ‘o_orderpriority’
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:155:26: error: ‘o’ was not declared in this scope
  155 |     std::vector<decltype(o)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:155:28: error: template argument 1 is invalid
  155 |     std::vector<decltype(o)> __items;
      |                            ^
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:155:28: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:159:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  159 |       __items.push_back(o);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:164:26: error: ‘o’ was not declared in this scope
  164 |     std::vector<decltype(o)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:164:28: error: template argument 1 is invalid
  164 |     std::vector<decltype(o)> __items;
      |                            ^
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:164:28: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:165:19: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  165 |     for (auto o : date_filtered_orders) {
      |                   ^~~~~~~~~~~~~~~~~~~~
      |                   std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:165:19: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  165 |     for (auto o : date_filtered_orders) {
      |                   ^~~~~~~~~~~~~~~~~~~~
      |                   std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:171:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  171 |       __items.push_back(o);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:177:19: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  177 |     for (auto o : late_orders) {
      |                   ^~~~~~~~~~~
      |                   std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:177:19: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  177 |     for (auto o : late_orders) {
      |                   ^~~~~~~~~~~
      |                   std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:188:74: error: no matching function for call to ‘std::vector<Result>::vector(<brace-enclosed initializer list>)’
  188 |         __groups.push_back(__struct4{__key, std::vector<Result>{Result{o}}});
      |                                                                          ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Result; _Alloc = std::allocator<Result>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; value_type = Result; allocator_type = std::allocator<Result>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; allocator_type = std::allocator<Result>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Result; _Alloc = std::allocator<Result>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq42680376487/001/prog.cpp:202:5: error: conversion from ‘vector<__struct5>’ to non-scalar type ‘vector<Result>’ requested
  175 |   std::vector<Result> result = ([&]() {
      |                                ~~~~~~~~
  176 |     std::vector<__struct4> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  177 |     for (auto o : late_orders) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  178 |       auto __key = o.o_orderpriority;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  179 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  180 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  181 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  182 |           __g.items.push_back(Result{o});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  183 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  184 |           break;
      |           ~~~~~~
  185 |         }
      |         ~
  186 |       }
      |       ~
  187 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  188 |         __groups.push_back(__struct4{__key, std::vector<Result>{Result{o}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  189 |       }
      |       ~
  190 |     }
      |     ~
  191 |     std::vector<std::pair<decltype(std::declval<__struct4>().key), __struct5>>
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  192 |         __items;
      |         ~~~~~~~~
  193 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  194 |       __items.push_back({g.key, __struct5{g.key, ((int)g.items.size())}});
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  195 |     }
      |     ~
  196 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  197 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  198 |     std::vector<__struct5> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  199 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  200 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  201 |     return __res;
      |     ~~~~~~~~~~~~~
  202 |   })();
      |   ~~^~
