tests/dataset/tpc-h/compiler/cpp/q4.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <algorithm>
#include <iostream>
#include <map>
#include <string>
#include <unordered_map>
#include <utility>
#include <vector>

template <typename T> void __json(const T &);
inline void __json(int v) { std::cout << v; }
inline void __json(double v) { std::cout << v; }
inline void __json(bool v) { std::cout << (v ? "true" : "false"); }
inline void __json(const std::string &v) { std::cout << "\"" << v << "\""; }
inline void __json(const char *v) { std::cout << "\"" << v << "\""; }
template <typename T> void __json(const std::vector<T> &v) {
  std::cout << "[";
  bool first = true;
  for (const auto &x : v) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(x);
  }
  std::cout << "]";
}
template <typename K, typename V> void __json(const std::map<K, V> &m) {
  std::cout << "{";
  bool first = true;
  for (const auto &kv : m) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(kv.first);
    std::cout << ":";
    __json(kv.second);
  }
  std::cout << "}";
}
template <typename K, typename V>
void __json(const std::unordered_map<K, V> &m) {
  std::cout << "{";
  bool first = true;
  for (const auto &kv : m) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(kv.first);
    std::cout << ":";
    __json(kv.second);
  }
  std::cout << "}";
}

struct Order {
  decltype(1) o_orderkey;
  decltype(std::string("1993-07-01")) o_orderdate;
  decltype(std::string("1-URGENT")) o_orderpriority;
};
struct Lineitem {
  decltype(1) l_orderkey;
  decltype(std::string("1993-07-10")) l_commitdate;
  decltype(std::string("1993-07-12")) l_receiptdate;
};
struct Result {
  decltype(o) o;
};
struct __struct4 {
  decltype(std::declval<Result>().o_orderpriority) key;
  std::vector<Result> items;
};
struct __struct5 {
  decltype(std::declval<__struct4>().key) o_orderpriority;
  int order_count;
};
inline void __json(const Lineitem &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_orderkey\":";
  __json(v.l_orderkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_commitdate\":";
  __json(v.l_commitdate);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_receiptdate\":";
  __json(v.l_receiptdate);
  std::cout << "}";
}
inline void __json(const Order &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_orderkey\":";
  __json(v.o_orderkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_orderdate\":";
  __json(v.o_orderdate);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_orderpriority\":";
  __json(v.o_orderpriority);
  std::cout << "}";
}
inline void __json(const __struct5 &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_orderpriority\":";
  __json(v.o_orderpriority);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"order_count\":";
  __json(v.order_count);
  std::cout << "}";
}
inline void __json(const Result &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o\":";
  __json(v.o);
  std::cout << "}";
}
int main() {
  std::vector<Order> orders = {
      Order{1, std::string("1993-07-01"), std::string("1-URGENT")},
      Order{2, std::string("1993-07-15"), std::string("2-HIGH")},
      Order{3, std::string("1993-08-01"), std::string("3-NORMAL")}};
  std::vector<Lineitem> lineitem = {
      Lineitem{1, std::string("1993-07-10"), std::string("1993-07-12")},
      Lineitem{1, std::string("1993-07-12"), std::string("1993-07-10")},
      Lineitem{2, std::string("1993-07-20"), std::string("1993-07-25")},
      Lineitem{3, std::string("1993-08-02"), std::string("1993-08-01")},
      Lineitem{3, std::string("1993-08-05"), std::string("1993-08-10")}};
  auto start_date = std::string("1993-07-01");
  auto end_date = std::string("1993-08-01");
  auto date_filtered_orders = ([&]() {
    std::vector<decltype(o)> __items;
    for (auto o : orders) {
      if (!(((o.o_orderdate >= start_date) && (o.o_orderdate < end_date))))
        continue;
      __items.push_back(o);
    }
    return __items;
  })();
  auto late_orders = ([&]() {
    std::vector<decltype(o)> __items;
    for (auto o : date_filtered_orders) {
      if (!(std::any_of(lineitem.begin(), lineitem.end(), [&](auto l) {
            return ((l.l_orderkey == o.o_orderkey) &&
                    (l.l_commitdate < l.l_receiptdate));
          })))
        continue;
      __items.push_back(o);
    }
    return __items;
  })();
  std::vector<Result> result = ([&]() {
    std::vector<__struct4> __groups;
    for (auto o : late_orders) {
      auto __key = o.o_orderpriority;
      bool __found = false;
      for (auto &__g : __groups) {
        if (__g.key == __key) {
          __g.items.push_back(Result{o});
          __found = true;
          break;
        }
      }
      if (!__found) {
        __groups.push_back(__struct4{__key, std::vector<Result>{Result{o}}});
      }
    }
    std::vector<std::pair<decltype(std::declval<__struct4>().key), __struct5>>
        __items;
    for (auto &g : __groups) {
      __items.push_back({g.key, __struct5{g.key, ((int)g.items.size())}});
    }
    std::sort(__items.begin(), __items.end(),
              [](auto &a, auto &b) { return a.first < b.first; });
    std::vector<__struct5> __res;
    for (auto &p : __items)
      __res.push_back(p.second);
    return __res;
  })();
  (__json(result));
  // test Q4 returns count of orders with late lineitems in range
  return 0;
}
